<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="15dp"
            app:strokeColor="@color/colorLoginPrimary"
            app:strokeWidth="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/sign_up_title"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilUserName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        app:boxStrokeWidth="2dp"
                        app:boxStrokeColor="@color/colorShamrock"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="flagNavigateNext"
                            android:inputType="textCapWords"
                            android:maxLength="25"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:theme="@style/Theme.MaterialComponents" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:errorEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="flagNavigateNext"
                            android:inputType="textCapWords"
                            android:maxLength="25"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:theme="@style/Theme.MaterialComponents" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:helperText="@string/help_password"
                        app:helperTextEnabled="true"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilConfirmPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlineBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        style="@style/StyleBtnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        app:backgroundTint="@color/colorLoginPrimary"
                        app:icon="@drawable/ic_email" />

                    <android.support.design.button.MaterialButton
                        style="@style/StyleBtnSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dribble"
                        app:backgroundTint="@color/colorDribble"
                        app:icon="@drawable/ic_dribble" />

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="center"
                        android:text="@string/already_a_member"
                        android:textColor="@color/colorPink"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </ScrollView>
        </android.support.design.card.MaterialCardView>
    </RelativeLayout>

</layout>
