<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login_header" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="20dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/welcome_text"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/app_slogan"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btnDribbleLogin"
                    style="@style/StyleBtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Dribble"
                    app:backgroundTint="@color/colorDribble"
                    app:icon="@drawable/ic_dribble" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/btnFacebookLogin"
                    style="@style/StyleBtnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Facebook"
                    app:backgroundTint="@color/colorLoginPrimary"
                    app:icon="@drawable/ic_facebook" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/no_account"
                    android:textColor="@color/colorLightBlue"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>
</layout>
